--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/main.css" />
 </head>
 <body>
-    <h1>REACT JS + SPRING DATA REST </h1>
+    <h1>Lista de Instrumentos</h1>
     <div id="react"></div>
     
     <script src="built/bundle.js"></script>
