--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,13 +1,14 @@
+<!DOCTYPE html>
 <html xmlns:th="https://www.thymeleaf.org">
 <head lang="en">
     <meta charset="UTF-8"/>
-    <title>ReactJS + Spring Data REST</title>
+    <title>Semana 11 - Front End</title>
     <link rel="stylesheet" href="/main.css" />
 </head>
 <body>
-    <h1>Lista de Instrumentos</h1>
+    <h1>Lista de Instrumentos!</h1>
     <div id="react"></div>
-    
+
     <script src="built/bundle.js"></script>
 
 </body>
